fixed spacing error

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -167,6 +167,7 @@ main {
 .navbar-item{
   font-family: "Poppins",sans-serif;
   font-size: 0.95rem;
+  padding: 0.75em 0em;
 }
   
 
@@ -179,7 +180,6 @@ a.navbar-item{
   text-decoration: none;
   color: #031D44;
   padding: 0.75em 0em;
-  margin: 0em 0.75em;
   display: inline-block;
   position: relative;
   opacity: 0.75;
@@ -206,7 +206,7 @@ a.navbar-item:hover::before {
 }
 
 #locality {
-  margin-right: 4em;
+  padding-right: 4em;
   display: flex;
 }
 
@@ -233,12 +233,22 @@ a.navbar-item:hover::before {
     display: none;
   }
 
+
+  .row {
+
+  }
+
   main{
     flex: 0 0 83.3333333333%;
     max-width: 83.3333333333%;
 
     padding-left: 3rem !important;
     padding-right: 3rem !important;
+  }
+
+  .site-footer{
+    padding-left: 15em;
+    padding-right: 15em;  
   }
 }
 
@@ -304,7 +314,6 @@ a.navbar-item:hover::before {
     display: block;
     cursor: pointer;
     padding-right: 1em;
-
   }
  
 
@@ -329,6 +338,21 @@ a.navbar-item:hover::before {
     display: block;
     cursor: pointer;
     padding-right: 1em;
+  }
+
+  #header{
+    flex-direction: column;
+  }
+
+  .navbar{
+    flex-direction: column;
+    width: 100%;
+    align-self: center;
+  }
+
+  a.navbar-item{
+    display: block;
+    width: 100%;
   }
 
   .collapse{
@@ -447,8 +471,6 @@ a.navbar-item:hover::before {
 .site-footer{
   background-color:gray;
 
-  padding-left: 15em;
-  padding-right: 15em;
 
   
   display: flex;
@@ -468,7 +490,9 @@ a.navbar-item:hover::before {
   
 }
 
-.flex-start{
+.footer-row {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 
